@@ -1,37 +1,0 @@
-# Run Travis CI for R via Docker
-#
-# Made by Dirk Eddelbuettel in December 2018 and released under GPL (>=2)
-
-os: linux
-dist: trusty
-sudo: required
-services: docker
-
-# with other packages we often say '--no-build-vignettes --no-manual' here
-# but this container is set up just for vignette, markdown and latex
-# so R_BL_CHK_OPTS is empty here
-env:
-  global:
-    - DOCKER_OPTS="--rm -ti -v $(pwd):/mnt -w /mnt"
-      DOCKER_CNTR="rocker/r-rmd"
-      R_BLD_CHK_OPTS=""
-      PKG_NAME=$(awk '/Package:/ {print $2}' DESCRIPTION)
-      PKG_VER=$(awk '/Version:/ {print $2}' DESCRIPTION)
-      PKG_TGZ="${PKG_NAME}_${PKG_VER}.tar.gz"
-
-before_install:
-  - docker pull ${DOCKER_CNTR}
-  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} r -p -e 'sessionInfo()'
-
-install:
-  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} R CMD build ${R_BLD_CHK_OPTS} .
-
-script:
-  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} R CMD check ${R_BLD_CHK_OPTS} ${PKG_TGZ}
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
-
-    
